[package]
name = "drew_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_pkv = "0.7.0"
rand = "0.8.5"
serde = "1.0.163"

[profile.dev]
opt-level = 1


